# Client

./: CMakeLists.txt
src/: gameboard.cpp  gameboard.h  main.cpp  mainwindow.cpp  mainwindow.h
test/: test_gameboard.cpp  test_mainwindow.cpp
